[tool.uv]
override-dependencies = ["docopt ; sys_platform == 'never'",]

[build-system]
requires = ["uv_build>=0.7.4,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
source-excludes = [
    "contrib",
]

[project]
authors = [
    { name = "Joshua Welch", email = "welchjd@med.umich.edu" },
    { name = "Lu Lu", email = "luluhz@umich.edu" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
]
dependencies = [
    "adjustText",
    "anndata",
    "annoy",
    "goatools",
    "h5sparse",
    "leidenalg",
    "matplotlib",
    "mygene",
    "numexpr",
    "numba",
    "numpy",
    "pandas",
    "plotnine",
    "python-igraph",
    "scikit-learn",
    "scipy",
    "seaborn",
    "umap-learn",
    "lazy-loader>=0.4",
]
description = "The Python version of LIGER package."
keywords = [
    "LIGER",
]
maintainers = [
    { name = "Andrew Robbins", email = "robbiand@med.umich.edu" },
]
name = "pyliger"
readme = "README.md"
requires-python = "<3.14, >=3.9"
version = "0.2.5"

[project.license]
text = "GPL-3.0-only"

[project.urls]
homepage = "https://welch-lab.github.io"
repository = "https://github.com/welch-lab/pyliger"

[dependency-groups]
dev = [
    "ruff>=0.15.8",
    "ty>=0.0.27",
]
