[build-system]
requires = ["uv_build>=0.7.4,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
source-excludes = [
    "contrib",
]

[project]
name = "pyliger"
version = "0.2.5"
description = "The Python version of LIGER package."
authors = [
    { name = "Joshua Welch", email = "welchjd@med.umich.edu" },
    { name = "Lu Lu", email = "luluhz@umich.edu" },
]
license = {text = "GPL-3.0-only"}
keywords = [
    "LIGER",
]
maintainers = [
    { name = "Andrew Robbins", email = "robbiand@med.umich.edu" },
]
readme = {file="README.md", content-type="text/markdown"}
requires-python = ">=3.12,<4.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
]
dependencies = [
    "adjustText",
    "anndata",
    "annoy",
    "goatools",
    "h5sparse",
    "leidenalg",
    "matplotlib",
    "mygene",
    "numexpr",
    "numba",
    "numpy",
    "pandas",
    "plotnine",
    "python-igraph",
    "scikit-learn",
    "scipy",
    "seaborn",
    "umap-learn",
]

[project.urls]
homepage = "https://welch-lab.github.io"
repository = "https://github.com/welch-lab/pyliger"

[dependency-groups]
dev = [
    "ruff>=0.15.9",
    "ty>=0.0.27",
]
